results/scraper/fex/2357
FEX fails to build on Alpine Linux (musl)
:wave: Hi!

On Alpine Linux, trying to build FEX results in the compilation halting with the following error:
```
/home/user/FEX/Source/Tools/FEXServer/ProcessPipe.cpp:477:60: error: use of undeclared identifier 'POLLREMOVE'
                  .events = POLLIN | POLLPRI | POLLRDHUP | POLLREMOVE,
                                                           ^
```
`POLLREMOVE` seems to come from the header `poll.h`, which I assume resolves to `/usr/include/poll.h`. `/usr/include/poll.h`, in turn, includes `<bits/poll.h>`. On Fedora with glibc, this file defines `POLLREMOVE`, but on Alpine Linux with musl it seems like this file is empty (like, completely empty) and as such `POLLREMOVE` ends up undefined.

In the FEX 2203 changelog you mentioned musl compilation being fixed (https://fex-emu.com/FEX-2203/). How was this tested? Am I missing something?